Notes/KubernetesAuthoritativeGuideBookNotes/CH04 Service/SE06 Ingress 7 Layer Route Framework/4 Ingress TLS/mywebsite-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebsite-ingress-tls
spec:
  tls:
  - hosts:
    - mywebsite.com
    secretName: mywebsite-ingress-secret
  rules:
  - host: mywebsite.com
    http:
      paths:
      - path: /demo
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8080
